@@ -13,7 +13,7 @@ paneld \- Cobalt admin menu for the LCD panel
 
 .SH SYNOPSIS
 .B paneld
-[-d] [--] [\fISTRINGs\fR]
+[-d] [-h] [--] [\fISTRINGs\fR]
 
 .SH DESCRIPTION
 .PP
@@ -37,6 +37,12 @@ If called with the
 option
 .B paneld
 will fork itself into the background immediately.
+
+The
+.B -h
+option will make
+.B paneld
+use scrolling horizontal menus rather than the usual vertical menu.
 
 .SH AUTHOR
 .PP
